[package]
name = "komodo_snapshot"
version = "0.0.1"
edition = "2018"
authors = ["Jorian <hey@jorian.dev>"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
komodo-rpc = { path = "../rust-komodo-rpc/client", version = "0.1.1" }
derive_more = "0.99"
csv = "1.1"